--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" >
   </head>
 
   <header>
       <!-- NavBar (copied and pasted from WC3) -->
   <!-- Static navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="font-family: 'Oswald', sans-serif;">
     <a class="navbar-brand" href="#" style="background-color: red; padding:10px; color:black">
         <h1>Aaron Miller</h1></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,15 +43,15 @@
   <body style="background-color:gray" style="height:95vh">
     <div class="container" style="background-color:white">
             <div class="row" style="margin-top:20px">
-                    <div class="col-lg-8">
+                    <div class="col-lg-12" style="text-align:center">
                         <h1>Contact</h1>
                         <hr>
                     </div>
-                    <div class="col-lg-4" style="background-color:gray">
-                    </div>
+                    <!-- <div class="col-lg-4" style="background-color:gray">
+                    </div> -->
             </div>
             <div class="row">
-                    <div class="col-lg-8">                        
+                    <div class="col-lg-12">                        
                     
                             <form id="contact-form">
                                     <ul>
@@ -76,8 +77,8 @@
                         <br><br>
                        
                     </div>
-                    <div class="col-lg-4" style="background-color:gray">   
-                    </div>
+                    <!-- <div class="col-lg-4" style="background-color:gray">   
+                    </div> -->
             </div>
     </div>
 
@@ -90,6 +91,6 @@
     </body>
 
     <footer style="background-color:rgb(37, 36, 36);color: white; text-align:center; height:50px; border-top: 5px solid red">
-    &copy;Copywright 2019
+    &copy;Copyright 2019
     </footer>
 </html>
