--- a/portfolio.html
+++ b/portfolio.html
@@ -58,14 +58,20 @@
       <div class="col-lg-12" style="text-align:center">
 
         <div class="work">
+          <a href="https://fast-brook-91386.herokuapp.com/"><img src="assets/images/spect.jpg"
+              alt="project 2" style="width: 200px"></a>
+          <h3>Project 2: Spectrum Careers</h3>
+        </div><br>
+
+        <div class="work">
           <a href="https://damp-caverns-93347.herokuapp.com/"><img src="assets/images/burger.jpg"
-              alt="project 1" style="width: 200px"></a>
+              alt="burger" style="width: 200px"></a>
           <h3>Eat-Da-Burger</h3>
         </div><br>
 
         <div class="work">
           <a href="https://bongobong.herokuapp.com/"><img src="assets/images/friendfinder.jpg"
-              alt="project 1" style="width: 200px"></a>
+              alt="friend finder" style="width: 200px"></a>
           <h3>Friend Finder</h3>
         </div><br>
 
